--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         //月份小于10的,前面补0
         mounth < 10 ? `0${mounth}` : mounth;
         //拼接下载地址
-        let url = `https://cdn.staticaly.com/gh/codeslive/leanote_backup/package@master/${year}/${mounth}/mongodb_backup.zip`;
+        let url = `https://cdn.staticaly.com/gh/codeslive/leanote_backup@master/package${year}/${mounth}/mongodb_backup.zip`;
 
         //判断获取到的链接是否为空
         if (url != undefined && url != '') {
