--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             if (year === year_name) {
               if (backup_list[j].id > 0) {
                 this.backup_list.push(backup_list[j]);
-                break;
+                break;  //找到该年份的数据就退出循环
               }
             }
           }
