新增vue.min.js cdn
Signed-off-by: codesLive <2783779285@qq.com>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/index.css">
   <link rel="icon" href="//cdn.staticaly.com/gh/mystaticcode/showImg@main/api/showImg/202301010359891.png">
-  <script src="js/vue.js"></script>
+  <script src="//cdn.staticaly.com/gh/mystaticcode/showImg@main/api/showImg/vue.min.js"></script>
   <script src="./js/download.js"></script>
   <title>蚂蚁笔记数据备份</title>
 </head>
