优化弹窗细节
Signed-off-by: codesLive <2783779285@qq.com>

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
       startDownload () {
         this.showDownload = true;
         window.location.href = this.startUrl;
+        this.closeAlert();
       },
 
       //显示弹窗
