--- a/index.html
+++ b/index.html
@@ -183,10 +183,9 @@
 
       //显示弹窗
       showAlert () {
-        // document.getElementById("Ground").style.display = "block";
         this.isAlert = true;
       },
-
+      //关闭弹窗
       closeAlert () {
         this.isAlert = false;
       },
