开始下载-->确认下载
Signed-off-by: codesLive <2783779285@qq.com>

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="content">{{errorText}}</div>
       <hr>
       <div class="close_alert">
-        <input type="button" value="开始下载" v-show="showDownload" @click="startDownload()">
+        <input type="button" value="确认下载" v-show="showDownload" @click="startDownload()">
         <button @click="closeAlert()">关闭弹窗</button>
       </div>
     </div>
