--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body>
   <div id="app">
-    <div class="header">
+    <div class="header" v-cloak>
       <button @click="getBackup(year_list.year)" v-for="(year_list,index) in year_list"
         :class="{ default: isClick === year_list.year }">{{year_list.year}}</button>
     </div>
@@ -48,7 +48,7 @@
     </div>
 
     <template v-if="type===1">
-      <table border="1" cellspacing="0" cellpadding="0" class="tabs">
+      <table border="1" cellspacing="0" cellpadding="0" class="tabs" v-cloak>
         <tr>
           <th>序号</th>
           <th>备份时间</th>
