--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </style>
 
 <body>
-  <div id="app">
+  <div id="app" v-cloak>
     <div class="header" v-cloak>
       <button @click="getBackup(year_list.year)" v-for="(year_list,index) in year_list"
         :class="{ default: isClick === year_list.year }">{{year_list.year}}</button>
